--- a/assingment (week-1).ipynb
+++ b/assingment (week-1).ipynb
@@ -652,25 +652,19 @@
       ],
       "metadata": {
         "id": "85PLXO82cJDS",
-        "outputId": "56a08866-1483-4c7f-f076-2c6c8b1d6599",
+        "outputId": "65836c51-f832-45ec-8c19-b5b2c1cab8f8",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 381
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-a912fbe5e855>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"enter the number:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mnum\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"positive number\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32melif\u001b[0m \u001b[0mnum\u001b[0m\u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"zero\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    861\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    862\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 863\u001b[0;31m             \u001b[0mpassword\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    864\u001b[0m         )\n\u001b[1;32m    865\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    902\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    903\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 904\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    905\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    906\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the number:89\n",
+            "positive number\n"
           ]
         }
       ]
@@ -685,10 +679,23 @@
         "  print(\"{0}is odd\".format(num))"
       ],
       "metadata": {
-        "id": "Q71JofgWcmOZ"
+        "id": "Q71JofgWcmOZ",
+        "outputId": "1b30ea0d-4efd-40a3-bf06-4b077269196c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the number:6\n",
+            "6is even\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -704,13 +711,25 @@
         "if f:\n",
         "  print(num,\"is not a prime number\")\n",
         "else:\n",
-        "  print(num,(is a prime number))"
+        "  print(num,\"is a prime number\")"
       ],
       "metadata": {
-        "id": "fQoLLQWkez8s"
+        "id": "fQoLLQWkez8s",
+        "outputId": "e7dfbd34-990e-41f0-f52b-0ad18fade3af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "29 is a prime number\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -724,31 +743,57 @@
         "  if num>1:\n",
         "    for i in range(2,num):\n",
         "      if (num % i)==0:\n",
-        "    else:\n",
-        "      print(num)"
+        "      else:\n",
+        "        print(num)"
       ],
       "metadata": {
-        "id": "6rBNClAngGhp"
+        "id": "6rBNClAngGhp",
+        "outputId": "eef9a790-16ac-4a30-c294-93a86d02c5e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 131
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-75dfb32cf451>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "year = 2000\n",
+        "year = 2022\n",
         "if (year % 400==0)and(year % 100==0):\n",
         "  print(\"{0}is a leap year\".format(year))\n",
-        "elif (year % 4==0)and(year % 100 ! = 0):\n",
+        "elif (year % 4==0)and(year % 100==0):\n",
         "  print(\"{0}is a leap year\".format(year))\n",
         "else:\n",
         "  print(\"{0} is not a leap year\".format(year))"
       ],
       "metadata": {
-        "id": "9FOKQZLYhirF"
+        "id": "9FOKQZLYhirF",
+        "outputId": "52ee63b4-955f-4cb5-b84e-b82813e9d5a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2022 is not a leap year\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -776,10 +821,22 @@
         "  print(\"The factorial of\",num,\"is\",factorial)"
       ],
       "metadata": {
-        "id": "GYJoVxW3ko-w"
+        "id": "GYJoVxW3ko-w",
+        "outputId": "fa29a468-1bb8-40eb-9b27-e0682959484c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The factorial of 7 is 5040\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -789,7 +846,97 @@
         "  print(num,'x',i,'=',num*i)"
       ],
       "metadata": {
-        "id": "Zgbek1GKl40G"
+        "id": "Zgbek1GKl40G",
+        "outputId": "ed9ca9dc-9908-4ffe-e99d-34eabf26d491",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15 x 1 = 15\n",
+            "15 x 2 = 30\n",
+            "15 x 3 = 45\n",
+            "15 x 4 = 60\n",
+            "15 x 5 = 75\n",
+            "15 x 6 = 90\n",
+            "15 x 7 = 105\n",
+            "15 x 8 = 120\n",
+            "15 x 9 = 135\n",
+            "15 x 10 = 150\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nterms = int(input(\"How many terms ?\"))\n",
+        "n1 , n2 = 0,1 \n",
+        "count =0\n",
+        "if nterms <= 0:\n",
+        "  print(\"please enter positive integer\")\n",
+        "elif nterms ==1:\n",
+        "  print(\"Fibonacci sequence upto\",nterms,\":\")\n",
+        "  print(n1)\n",
+        "else:\n",
+        "  print(\"Fibonacci sequence:\")\n",
+        "  while count < nterms:\n",
+        "    print(n1)\n",
+        "    nth= n1 + n2\n",
+        "    n1=n2\n",
+        "    n2=nth\n",
+        "    count +=1"
+      ],
+      "metadata": {
+        "id": "Tz9bEFfWmh1P",
+        "outputId": "5e10e792-9a72-4170-fa9e-a126706a3340",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How many terms ?8\n",
+            "Fibonacci sequence:\n",
+            "0\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "8\n",
+            "13\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = int(input(\"enter the number:\"))\n",
+        "sum = 0\n",
+        "temp = num\n",
+        "while temp >0:\n",
+        "  digit = temp % 10\n",
+        "  sum = digit**3\n",
+        "  temp  = 10\n",
+        "  if num==sum:\n",
+        "    print(num,\"is an Armstrong number\")\n",
+        "  else:\n",
+        "    print(num,\"is not an Armstrong number\")\n",
+        "end"
+      ],
+      "metadata": {
+        "id": "Gqdlgds0snfW"
       },
       "execution_count": null,
       "outputs": []
@@ -797,10 +944,23 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "lower = 100\n",
+        "upper = 2000\n",
+        "\n",
+        "for i in range (lower, upper+1):\n",
+        "  order = len(str(num))\n",
+        "  sum = 0\n",
+        "\n",
+        "  temp = num\n",
+        "  while temp > 0:\n",
+        "    digit = temp % 10\n",
+        "    sum = digit**order\n",
+        "    temp = 10\n",
+        "  if num== sum:\n",
+        "    print(sum)"
       ],
       "metadata": {
-        "id": "Tz9bEFfWmh1P"
+        "id": "ShHYhVeHv1Ye"
       },
       "execution_count": null,
       "outputs": []
