--- a/assingment (week-1).ipynb
+++ b/assingment (week-1).ipynb
@@ -657,7 +657,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -685,7 +685,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -720,7 +720,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -754,7 +754,7 @@
           "height": 131
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -784,7 +784,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -827,7 +827,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -852,7 +852,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -899,7 +899,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -922,24 +922,37 @@
     {
       "cell_type": "code",
       "source": [
-        "num = int(input(\"enter the number:\"))\n",
-        "sum = 0\n",
-        "temp = num\n",
-        "while temp >0:\n",
-        "  digit = temp % 10\n",
-        "  sum = digit**3\n",
-        "  temp  = 10\n",
-        "  if num==sum:\n",
-        "    print(num,\"is an Armstrong number\")\n",
-        "  else:\n",
-        "    print(num,\"is not an Armstrong number\")\n",
-        "end"
+        "u= int(input(\"enter the higher number:\"))\n",
+        "v= int(input(\"enter the lower number:\"))\n",
+        "for i in range(1,u+1):\n",
+        "  order =len(str(i))\n",
+        "  sum = 0\n",
+        "  temp = i\n",
+        "  while temp >0:\n",
+        "    digit = temp % 10\n",
+        "    sum = digit**order\n",
+        "    temp  = 10\n",
+        "  if n==sum:\n",
+        "    print(n,end='')"
       ],
       "metadata": {
-        "id": "Gqdlgds0snfW"
+        "id": "Gqdlgds0snfW",
+        "outputId": "a729ee09-6f00-4104-b44c-c2122aca4e04",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "enter the higher number:2000\n",
+            "enter the lower number:100\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -961,6 +974,37 @@
       ],
       "metadata": {
         "id": "ShHYhVeHv1Ye"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = 16\n",
+        "\n",
+        "if num < 0:\n",
+        "  print(\"enter the positive number\")\n",
+        "else:\n",
+        "  sum = 0\n",
+        "  while(num>0):\n",
+        "    sum = num\n",
+        "    num = 1\n",
+        "  print(\"Sum is equal to\",sum)"
+      ],
+      "metadata": {
+        "id": "L6BwCwCxyOX9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "CAAJ0y2t1g5U"
       },
       "execution_count": null,
       "outputs": []
