--- a/assingment (week-1).ipynb
+++ b/assingment (week-1).ipynb
@@ -936,23 +936,10 @@
         "    print(n,end='')"
       ],
       "metadata": {
-        "id": "Gqdlgds0snfW",
-        "outputId": "a729ee09-6f00-4104-b44c-c2122aca4e04",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Gqdlgds0snfW"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "enter the higher number:2000\n",
-            "enter the lower number:100\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1001,10 +988,21 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "#section E"
       ],
       "metadata": {
         "id": "CAAJ0y2t1g5U"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr[] = {1, 2, 3, 4, 5, 6, 7}"
+      ],
+      "metadata": {
+        "id": "6vqgQ4O72flz"
       },
       "execution_count": null,
       "outputs": []
