--- a/assingment (week-1).ipynb
+++ b/assingment (week-1).ipynb
@@ -999,10 +999,46 @@
     {
       "cell_type": "code",
       "source": [
-        "arr[] = {1, 2, 3, 4, 5, 6, 7}"
+        "arr = [1, 2, 3, 4, 5, 6, 7]\n",
+        "sum = 0\n",
+        "\n",
+        "for i in range (len(arr)):\n",
+        "  sum = sum + arr[i]\n",
+        "print(sum)"
       ],
       "metadata": {
         "id": "6vqgQ4O72flz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def largest (arr, n):\n",
+        "  for i in range (1,n):\n",
+        "    if arr [i] > max:\n",
+        "      max = arr[i]\n",
+        "  return max\n",
+        "\n",
+        "arr = [10, 56, 368, 657]\n",
+        "n = len(arr)\n",
+        "a = largest(arr, n)\n",
+        "print(\"largest in given array\", ans)"
+      ],
+      "metadata": {
+        "id": "EzLbUMbq4hjE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "HdPQDCJZ6BgF"
       },
       "execution_count": null,
       "outputs": []
