--- a/Week 2 assingment.ipynb
+++ b/Week 2 assingment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMyvD0ERGE6fSgmWD1HZvx9",
+      "authorship_tag": "ABX9TyONcYmgBTVYzij1IKwszV+0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "K_bkyzQljwHK",
-        "outputId": "5ecfa388-7dcd-4be6-b304-8182910578ab"
+        "outputId": "eb3420af-751d-4a96-8048-b499ddf27fbb"
       },
       "outputs": [
         {
@@ -55,7 +55,7 @@
         " else:\n",
         "   sum=3\n",
         " return sum\n",
-        "print(sum_three(4,4,4))\n",
+        "print(sum_three(4,6,8))\n",
         "print(sum_three(3,2,1))\n",
         "  "
       ]
@@ -80,7 +80,7 @@
         "id": "glE0cbG5rZO-",
         "outputId": "6bb4a3e2-8acf-4a51-a665-3104fd2dba7d"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +115,7 @@
         "id": "Aoc8IxiVpHko",
         "outputId": "c5f91f42-9905-4fa2-a64c-39d9ff26f012"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,10 +134,10 @@
         "#4\n",
         "#def function3(str):\n",
         "rocky = \"Voilence likes me, I can't avoid...\"\n",
-        "d = list(rocky)\n",
-        "print(d)\n",
+        "z = list(rocky)\n",
+        "print(z)\n",
         "go = []\n",
-        "for i in d:\n",
+        "for i in z:\n",
         "    go.extend(ord(num) for num in i)\n",
         "print(go)\n",
         "\n",
@@ -155,9 +155,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5Onjy_BPp-d4",
-        "outputId": "42af60c2-d716-4d02-9c54-30118917502e"
+        "outputId": "59e5adb2-8aed-46a2-9c2e-6db4469c14ad"
       },
-      "execution_count": 12,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,6 +168,47 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#5\n",
+        "def allu_arjun(st):\n",
+        "  res = []\n",
+        "  for index, c in enumerate(st):\n",
+        "    if index % 2 == 0:\n",
+        "      res.append(c.upper())\n",
+        "    else:\n",
+        "      res.append(c.lower())\n",
+        "  return '' .join(res)\n",
+        "print(allu_arjun(\"Walk like a King or walk like you don't care who is the king.\"))"
+      ],
+      "metadata": {
+        "id": "8ooIvBS3eydN",
+        "outputId": "8a519bfe-2aeb-4997-a02f-32ab3473eae2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "WaLk lIkE A KiNg oR WaLk lIkE YoU DoN'T CaRe wHo iS ThE KiNg.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "dvtx9IcQl0cl"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
