--- a/ASSIGNMENT WEEK 4.ipynb
+++ b/ASSIGNMENT WEEK 4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPvuDgZeHULiud884+Dme81",
+      "authorship_tag": "ABX9TyNG680tRSgBBYUkOv1LY0Gk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "QoJQD5AhnlB7"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -85,19 +85,97 @@
       "metadata": {
         "id": "2kl5bUVgp5db"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        " #4    Create a Bus class that inherits from the Vehicle class. Give the capacity argument of Bus.seating_capacity() a default value of 50.\n"
+        "#4 \n",
+        "class Vehicle:\n",
+        "    def __init__(self, name, mileage, capacity):\n",
+        "        self.name = name\n",
+        "        self.mileage = mileage\n",
+        "        self.capacity = capacity\n",
+        "\n",
+        "    def fare(self):\n",
+        "        return self.capacity * 100\n",
+        "\n",
+        "class Bus(Vehicle):\n",
+        "    pass\n",
+        "\n",
+        "School_bus = Bus(\"School Volvo\", 12, 67)\n",
+        "print(\"Total Bus fare is:\", School_bus.fare())"
       ],
       "metadata": {
-        "id": "FAPQVvThrAx0"
+        "id": "FAPQVvThrAx0",
+        "outputId": "a1be7a9c-4285-4e7c-f6d2-f06007a08a39",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 8,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total Bus fare is: 6700\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Vehicle:\n",
+        "    def __init__(self, name, mileage, capacity):\n",
+        "        self.name = name\n",
+        "        self.mileage = mileage\n",
+        "        self.capacity = capacity\n",
+        "\n",
+        "    def fare(self):\n",
+        "        return self.capacity * 100\n",
+        "\n",
+        "class Bus(Vehicle):\n",
+        "    pass\n",
+        "\n",
+        "School_bus = Bus(\"School Volvo\", 12, 67)\n",
+        "print(\"Total Bus fare is:\", School_bus.fare() +#4 \n",
+        "class Vehicle:\n",
+        "    def __init__(self, name, mileage, capacity):\n",
+        "        self.name = name\n",
+        "        self.mileage = mileage\n",
+        "        self.capacity = capacity\n",
+        "\n",
+        "    def fare(self):\n",
+        "        return self.capacity * 100\n",
+        "\n",
+        "class Bus(Vehicle):\n",
+        "    pass\n",
+        "\n",
+        "School_bus = Bus(\"School Volvo\", 12, 67)\n",
+        "print(\"Total Bus fare is:\", School_bus.fare())"
+      ],
+      "metadata": {
+        "id": "zfe82tgtZsnu",
+        "outputId": "1ca6d045-f117-4d88-87c6-8c3a0b7ae72c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-90aa85fb2e4f>\"\u001b[0;36m, line \u001b[0;32m15\u001b[0m\n\u001b[0;31m    class Vehicle:\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     }
   ]
 }
