--- a/ASSIGNMENT WEEK 4.ipynb
+++ b/ASSIGNMENT WEEK 4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNG680tRSgBBYUkOv1LY0Gk",
+      "authorship_tag": "ABX9TyMfxTHeWSanZJ171dMopSMV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,28 @@
     {
       "cell_type": "code",
       "source": [
-        "#4 \n",
+        "#4  Create a Bus class that inherits from the Vehicle class. Give the capacity argument of Bus.seating_capacity() a default value of 50.\n",
+        "\n",
+        "class Vehicle:\n",
+        "    def __init__(self, name, max_speed, mileage):\n",
+        "        self.name = name\n",
+        "        self.max_speed = max_speed\n",
+        "        self.mileage = mileage\n",
+        "\n",
+        "    def seating_capacity(self, capacity):\n",
+        "        return f\"The seating capacity of a {self.name} is {capacity} passengers\"\n"
+      ],
+      "metadata": {
+        "id": "Mbj-9GMwmN1m"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#5  Create a Bus child class that inherits from the Vehicle class. The default fare charge of any vehicle is seating capacity * 100. If Vehicle is Bus instance, we need to add an extra 10% on full fare as a maintenance charge. So total fare for bus instance will become the final amount = total fare + 10% of the total fare.\n",
+        " \n",
         "class Vehicle:\n",
         "    def __init__(self, name, mileage, capacity):\n",
         "        self.name = name\n",
@@ -112,7 +133,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a1be7a9c-4285-4e7c-f6d2-f06007a08a39"
+        "outputId": "88ab84f6-7a14-482c-87ed-b4edf612c2a2"
       },
       "execution_count": 2,
       "outputs": [
@@ -121,58 +142,6 @@
           "name": "stdout",
           "text": [
             "Total Bus fare is: 6700\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "class Vehicle:\n",
-        "    def __init__(self, name, mileage, capacity):\n",
-        "        self.name = name\n",
-        "        self.mileage = mileage\n",
-        "        self.capacity = capacity\n",
-        "\n",
-        "    def fare(self):\n",
-        "        return self.capacity * 100\n",
-        "\n",
-        "class Bus(Vehicle):\n",
-        "    pass\n",
-        "\n",
-        "School_bus = Bus(\"School Volvo\", 12, 67)\n",
-        "print(\"Total Bus fare is:\", School_bus.fare() +#4 \n",
-        "class Vehicle:\n",
-        "    def __init__(self, name, mileage, capacity):\n",
-        "        self.name = name\n",
-        "        self.mileage = mileage\n",
-        "        self.capacity = capacity\n",
-        "\n",
-        "    def fare(self):\n",
-        "        return self.capacity * 100\n",
-        "\n",
-        "class Bus(Vehicle):\n",
-        "    pass\n",
-        "\n",
-        "School_bus = Bus(\"School Volvo\", 12, 67)\n",
-        "print(\"Total Bus fare is:\", School_bus.fare())"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 129
-        },
-        "id": "zfe82tgtZsnu",
-        "outputId": "1ca6d045-f117-4d88-87c6-8c3a0b7ae72c"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-90aa85fb2e4f>\"\u001b[0;36m, line \u001b[0;32m15\u001b[0m\n\u001b[0;31m    class Vehicle:\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ]
